<resources>
    <string name="app_name">Fitness Tracker</string>

    <string-array name="workout_types">
        <item>Running</item>
        <item>Weightlifting</item>
        <item>Cycling</item>
    </string-array>

    <!-- Added strings for activity_add_workout.xml -->
    <string name="title_fitness_tracker">Fitness Tracker</string>
    <string name="hint_workout_type">Workout Type</string>
    <string name="hint_duration">Duration (minutes)</string>
    <string name="hint_calories">Calories Burned</string>
    <string name="hint_distance">Distance (km)</string>
    <string name="hint_avg_pace">Average Pace (min/km)</string>
    <string name="hint_exercise_name">Exercise Name</string>
    <string name="hint_total_sets">Total Sets</string>
    <string name="hint_total_reps">Total Reps</string>
    <string name="hint_max_weight">Max Weight (kg)</string>
    <string name="hint_avg_speed">Average Speed (km/h)</string>
    <string name="action_save_workout">Save Workout</string>

    <!-- Dashboard strings -->
    <string name="welcome_back">Welcome back!</string>
    <string name="user_name_placeholder">User Name</string>
    <string name="user_stats_placeholder">Age: -- | Weight: -- kg | Height: -- cm</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="my_profile">My Profile</string>
    <string name="add_new_workout">Add New Workout</string>
    <string name="workout_history">Workout History</string>
    <string name="my_goals">My Goals</string>
    <string name="logout">Logout</string>
</resources>
